samples/_failures_safe/1761498131_852cfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd5f748a.c: In function ‘main’:
./samples/SAFE/__tmp_cd5f748a.c:150:21: error: expected declaration or statement at end of input
  150 |                     printf("Error: Matrices must have same dimensions for addition.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_cd5f748a.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cd5f748a.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cd5f748a.c:150:21: error: expected declaration or statement at end of input
